@@ -523,7 +523,7 @@ IndelModelProduction::exportModelUsingInputJson(const std::string& jsonFilename)
     std::string jsonString;
     Json::Value root;
     {
-        std::ifstream ifs(jsonFilename , std::ifstream::binary);
+        std::ifstream ifs(jsonFilename, std::ifstream::binary);
         std::stringstream buffer;
         buffer << ifs.rdbuf();
         jsonString = buffer.str();
